==> Wiznet/WizFi360-EVB-Pico-C/port/WizFi360/src/UART_RP2040.c <==
#include "UART_RP2040.h"
#include "RP2040_Device.h"
#define ARM_USART_DRV_VERSION ARM_DRIVER_VERSION_MAJOR_MINOR(1,0)
#define UNUSED(x) (void)(x)           /* macro to get rid of 'unused parameter' warning */

static const UART_RESOURCES * UART_Resources (void) {
  const UART_RESOURCES *uart = NULL;

#if USE_UART0
  uart = &UART0_Resources;
#elif USE_UART1
  uart = &UART1_Resources;
#endif
  return uart;
}

static int32_t UART_PowerControl (const UART_RESOURCES *uart,
                                             ARM_POWER_STATE state) {


  if ((state != ARM_POWER_OFF)  &&
      (state != ARM_POWER_FULL) &&
      (state != ARM_POWER_LOW)) {
    return ARM_DRIVER_ERROR_PARAMETER;
  }

  switch (state) {
    case ARM_POWER_OFF:

      // UART peripheral reset
      NVIC_DisableIRQ(uart->irq_num);
      NVIC_ClearPendingIRQ(uart->irq_num);
      //UART_PeripheralReset (uart->reg);
      uart_deinit (uart->reg);
      uart->info->flags &= ~UART_FLAG_POWERED;

      // Clear Status flags
      uart->info->status.tx_busy          = 0U;
      uart->info->status.rx_busy          = 0U;
      uart->info->status.tx_underflow     = 0U;
      uart->info->status.rx_overflow      = 0U;
      uart->info->status.rx_break         = 0U;
      uart->info->status.rx_framing_error = 0U;
      uart->info->status.rx_parity_error  = 0U;

      uart->xfer->send_active             = 0U;

      // Clear powered flag
      uart->info->flags &= ~UART_FLAG_POWERED;
      break;
    case ARM_POWER_LOW:
      return ARM_DRIVER_ERROR_UNSUPPORTED;

    case ARM_POWER_FULL:
      // Clear Status flags
      uart->info->status.tx_busy          = 0U;
      uart->info->status.rx_busy          = 0U;
      uart->info->status.tx_underflow     = 0U;
      uart->info->status.rx_overflow      = 0U;
      uart->info->status.rx_break         = 0U;
      uart->info->status.rx_framing_error = 0U;
      uart->info->status.rx_parity_error  = 0U;

      uart->xfer->send_active             = 0U;
      uart->xfer->break_flag              = 0U;

      uart->info->flow_control            = 0U;

      // Set flag initialized
      uart->info->flags = UART_FLAG_POWERED | UART_FLAG_INITIALIZED;

      uart_init (uart->reg, UART_DEFAULT_BAUDRATE);

      // Clear and enable USART IRQ
      NVIC_ClearPendingIRQ(uart->irq_num);
      NVIC_EnableIRQ(uart->irq_num);

      // And set up and enable the interrupt handlers
      irq_set_exclusive_handler(uart->irq_num, on_uart_isr);
      irq_set_enabled(uart->irq_num, true);

      // Now enable the UART to send interrupts - RX only
      uart_set_irq_enables(uart->reg, true, false);


    break;
  }
  return ARM_DRIVER_OK;
}

static int32_t UART_Send (const UART_RESOURCES *uart,
                             const void           *data,
                                   uint32_t        num) {

  uint32_t event = 0;
  
  if ((data == NULL) || (num == 0U)) {
    // Invalid parameters
    return ARM_DRIVER_ERROR_PARAMETER;
  }

  if ((uart->info->flags & UART_FLAG_CONFIGURED) == 0U) {
    // USART is not configured (mode not selected)
    return ARM_DRIVER_ERROR;
  }

  if (uart->xfer->send_active != 0U) {
    // Send is not completed yet
    return ARM_DRIVER_ERROR_BUSY;
  }

  // Set Send Active flag
  uart->xfer->send_active = 1U;

  // Save transmit buffer info
  uart->xfer->tx_cnt = 0U;
  uart->xfer->tx_num = num;
  uart->xfer->tx_buf = (const uint8_t *)data;

  uart_write_blocking(uart->reg, (const uint8_t *)uart->xfer->tx_buf, uart->xfer->tx_num);
  uart->xfer->tx_buf = NULL;
  uart->xfer->tx_cnt = uart->xfer->tx_num;
  uart->xfer->send_active = 0U;

  event |= ARM_USART_EVENT_SEND_COMPLETE;
  if (uart->info->cb_event != NULL)
    uart->info->cb_event (event);

  return ARM_DRIVER_OK;

}

static int32_t UART_Receive (const UART_RESOURCES *uart,
                                       void           *data,
                                       uint32_t        num) {
                             
  if ((data == NULL) || (num == 0U)) {
    // Invalid parameters
    return ARM_DRIVER_ERROR_PARAMETER;
  }

  if ((uart->info->flags & UART_FLAG_CONFIGURED) == 0U) {
    // USART is not configured (mode not selected)
    return ARM_DRIVER_ERROR;
  }

  if (uart->info->status.rx_busy == 1U) {
    // Receive operation is not completed yet
    return ARM_DRIVER_ERROR_BUSY;
  }

  // Set receive busy flag
  uart->info->status.rx_busy = 1U;

  // Clear status flags
  uart->info->status.rx_break          = 0U;
  uart->info->status.rx_framing_error  = 0U;
  uart->info->status.rx_overflow       = 0U;
  uart->info->status.rx_parity_error   = 0U;

  // Set receive info
  uart->xfer->rx_cnt =  0U;
  uart->xfer->rx_num = num;
  uart->xfer->rx_buf = (uint8_t *)data;

  return ARM_DRIVER_OK;
}

static int32_t UART_Control (const UART_RESOURCES *uart,
                                       uint32_t        control,
                                       uint32_t        arg) {
  uint32_t mode;
  uint32_t uart_data_bits, uart_parity, uart_stopbits;
  uint8_t uart_rts, uart_cts;

  uart_data_bits = 0;
  uart_parity = 0;
  uart_stopbits = 0;
  uart_rts = 0;
  uart_cts = 0;

  if (control & (1U << 4)) {
    // USART Miscellaneous Operations
    switch (control & ARM_USART_CONTROL_Msk) {
      case ARM_USART_SET_DEFAULT_TX_VALUE:       // Set default Transmit value (Synchronous Receive only); arg = value
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_SET_IRDA_PULSE:             // Set IrDA Pulse in ns; arg: 0=3/16 of bit period
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_SET_SMART_CARD_GUARD_TIME:  // Set Smart Card Guard Time; arg = number of bit periods
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_SET_SMART_CARD_CLOCK:       // Set Smart Card Clock in Hz; arg: 0=Clock not generated
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_CONTROL_SMART_CARD_NACK:    // Smart Card NACK generation; arg: 0=disabled, 1=enabled
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_CONTROL_TX:                 // Transmitter; arg: 0=disabled, 1=enabled
        if (arg == 0U) {
          // Disable UART transmitter
          hw_clear_bits(&uart->h->cr, UART_UARTCR_TXE_BITS);
          uart->info->flags &= ~UART_FLAG_TX_ENABLED;
        }
        else {
          hw_set_bits(&uart->h->cr, UART_UARTCR_TXE_BITS);
          uart->info->flags |= UART_FLAG_TX_ENABLED;
        }
        return ARM_DRIVER_OK;

      case ARM_USART_CONTROL_RX:                 // Receiver; arg: 0=disabled, 1=enabled
        // Check if RX line available
        if (arg == 0U) {
          // Disable USART receive and receive interrupt
          uart_set_irq_enables(uart->reg, false, false);

          // Disable USART receiver
          hw_clear_bits(&uart->h->cr, UART_UARTCR_RXE_BITS);
          uart->info->flags &= ~UART_FLAG_RX_ENABLED;
        }
        else {
          // Enable USART receiver
          hw_set_bits(&uart->h->cr, UART_UARTCR_RXE_BITS);

          // Enable USART receive and receive timeout interrupt
          uart_set_irq_enables(uart->reg, true, false);
          uart->info->flags |= UART_FLAG_RX_ENABLED;
        }
        return ARM_DRIVER_OK;

      case ARM_USART_CONTROL_BREAK:              // Continuous Break transmission; arg: 0=disabled, 1=enabled
        return ARM_DRIVER_ERROR_UNSUPPORTED;
      case ARM_USART_ABORT_SEND:                 // Abort ARM_USART_Send
        // Clear transfer info
        uart->xfer->tx_buf = NULL;
        uart->xfer->tx_num = 0U;
        uart->xfer->tx_cnt = 0U;

        // Clear Send Active flag
        uart->xfer->send_active = 0U;

        return ARM_DRIVER_OK;

      case ARM_USART_ABORT_RECEIVE:              // Abort ARM_USART_Receive
        // Clear transfer info
        uart->xfer->rx_buf = NULL;
        uart->xfer->rx_num = 0;
        uart->xfer->rx_cnt = 0;

        // Clear RX Busy status
        uart->info->status.rx_busy = 0U;

        return ARM_DRIVER_OK;

      case ARM_USART_ABORT_TRANSFER:             // Abort ARM_USART_Transfer
        // Transfer not implemented
        return ARM_DRIVER_ERROR;

      default: 
        return ARM_DRIVER_ERROR;
    }
  } else {
    // USART Mode

    if ((uart->info->status.rx_busy != 0U) || (uart->xfer->send_active != 0U)) {
      // Receive or send operation in progress
      return ARM_DRIVER_ERROR_BUSY;
    }

    switch (control & ARM_USART_CONTROL_Msk) {
      case ARM_USART_MODE_ASYNCHRONOUS:          // UART (Asynchronous); arg = Baudrate
        //mode = ARM_USART_MODE_ASYNCHRONOUS;    
        uart_init(uart->reg, UART_DEFAULT_BAUDRATE);
        uart_set_fifo_enabled(uart->reg, true);
        break;

      case ARM_USART_MODE_SYNCHRONOUS_MASTER:    // Synchronous Master (generates clock signal); arg = Baudrate
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_MODE_SYNCHRONOUS_SLAVE:     // Synchronous Slave (external clock signal)
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_MODE_SINGLE_WIRE:           // UART Single-wire (half-duplex); arg = Baudrate
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_MODE_IRDA:                  // UART IrDA; arg = Baudrate
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      case ARM_USART_MODE_SMART_CARD:            // UART Smart Card; arg = Baudrate
        return ARM_DRIVER_ERROR_UNSUPPORTED;

      default:
        return ARM_DRIVER_ERROR;
    }

    // Data Bits
    switch (control & ARM_USART_DATA_BITS_Msk) {
      case ARM_USART_DATA_BITS_5:
        break;
      case ARM_USART_DATA_BITS_6:
          uart_data_bits = 6;
          hw_write_masked(&uart->h->lcr_h,
                         ((uart_data_bits - 5u) << UART_UARTLCR_H_WLEN_LSB),
                         UART_UARTLCR_H_WLEN_BITS);
        break;
      case ARM_USART_DATA_BITS_7:
          uart_data_bits = 7;
          hw_write_masked(&uart->h->lcr_h,
                         ((uart_data_bits - 5u) << UART_UARTLCR_H_WLEN_LSB),
                         UART_UARTLCR_H_WLEN_BITS);

        break;
      case ARM_USART_DATA_BITS_8:
          uart_data_bits = 8;
          hw_write_masked(&uart->h->lcr_h,
                         ((uart_data_bits - 5u) << UART_UARTLCR_H_WLEN_LSB),
                         UART_UARTLCR_H_WLEN_BITS);

        break;
      default:  return ARM_USART_ERROR_DATA_BITS;
    }

    // Parity Bit
    switch (control & ARM_USART_PARITY_Msk) {
      case ARM_USART_PARITY_NONE:
        uart_parity = UART_PARITY_NONE;
        hw_write_masked(&uart->h->lcr_h,
                       (bool_to_bit(uart_parity != UART_PARITY_NONE) << UART_UARTLCR_H_PEN_LSB) |
                       (bool_to_bit(uart_parity == UART_PARITY_EVEN) << UART_UARTLCR_H_EPS_LSB),
                        UART_UARTLCR_H_PEN_BITS |
                        UART_UARTLCR_H_EPS_BITS);
        break;
      case ARM_USART_PARITY_ODD:
        uart_parity = UART_PARITY_ODD;
        hw_write_masked(&uart->h->lcr_h,
               (bool_to_bit(uart_parity != UART_PARITY_NONE) << UART_UARTLCR_H_PEN_LSB) |
               (bool_to_bit(uart_parity == UART_PARITY_EVEN) << UART_UARTLCR_H_EPS_LSB),
                UART_UARTLCR_H_PEN_BITS |
                UART_UARTLCR_H_EPS_BITS);
        break;
      case ARM_USART_PARITY_EVEN:
        uart_parity = UART_PARITY_EVEN;
        hw_write_masked(&uart->h->lcr_h,
                       (bool_to_bit(uart_parity != UART_PARITY_NONE) << UART_UARTLCR_H_PEN_LSB) |
                       (bool_to_bit(uart_parity == UART_PARITY_EVEN) << UART_UARTLCR_H_EPS_LSB),
                        UART_UARTLCR_H_PEN_BITS |
                        UART_UARTLCR_H_EPS_BITS);

        break;
      default: return ARM_USART_ERROR_PARITY;
    }

    // Stop Bit
    switch (control & ARM_USART_STOP_BITS_Msk) {
      case ARM_USART_STOP_BITS_1:
        uart_stopbits = 1;
        hw_write_masked(&uart->h->lcr_h,
                       ((uart_stopbits - 1u) << UART_UARTLCR_H_STP2_LSB),
                       UART_UARTLCR_H_STP2_BITS);
        break;
      case ARM_USART_STOP_BITS_2:
        uart_stopbits = 2;
        hw_write_masked(&uart->h->lcr_h,
                       ((uart_stopbits - 1u) << UART_UARTLCR_H_STP2_LSB),
                       UART_UARTLCR_H_STP2_BITS);
        break;
      default: return ARM_USART_ERROR_STOP_BITS;
    }

    // Flow Control
    switch (control & ARM_USART_FLOW_CONTROL_Msk) {
      case ARM_USART_FLOW_CONTROL_NONE:
        gpio_set_function(UART_RTS_PIN, GPIO_FUNC_NULL);
        gpio_set_function(UART_CTS_PIN, GPIO_FUNC_NULL);
        uart_rts = 0;
        uart_cts = 0;
        hw_write_masked(&uart->h->cr,
                       (bool_to_bit(uart_cts) << UART_UARTCR_CTSEN_LSB) | (bool_to_bit(uart_rts) << UART_UARTCR_RTSEN_LSB),
                       UART_UARTCR_RTSEN_BITS | UART_UARTCR_CTSEN_BITS);
        break;

      case ARM_USART_FLOW_CONTROL_RTS:        
#if (UART_RTS_PIN)
        gpio_set_function(UART_RTS_PIN, GPIO_FUNC_UART);
        gpio_set_function(UART_CTS_PIN, GPIO_FUNC_NULL);
        uart_rts = 1;
        uart_cts = 0;
        hw_write_masked(&uart->h->cr,
                       (bool_to_bit(uart_cts) << UART_UARTCR_CTSEN_LSB) | (bool_to_bit(uart_rts) << UART_UARTCR_RTSEN_LSB),
                       UART_UARTCR_RTSEN_BITS | UART_UARTCR_CTSEN_BITS);
        break;
#else
        return ARM_USART_ERROR_FLOW_CONTROL;
#endif

      case ARM_USART_FLOW_CONTROL_CTS:
#if (UART_CTS_PIN)
        gpio_set_function(UART_RTS_PIN, GPIO_FUNC_NULL);
        gpio_set_function(UART_CTS_PIN, GPIO_FUNC_UART);
        uart_rts = 0;
        uart_cts = 1;
        hw_write_masked(&uart->h->cr,
                       (bool_to_bit(uart_cts) << UART_UARTCR_CTSEN_LSB) | (bool_to_bit(uart_rts) << UART_UARTCR_RTSEN_LSB),
                       UART_UARTCR_RTSEN_BITS | UART_UARTCR_CTSEN_BITS);

#else
        return ARM_USART_ERROR_FLOW_CONTROL;
#endif
      case ARM_USART_FLOW_CONTROL_RTS_CTS:
#if (UART_RTS_PIN && UART_CTS_PIN)
        gpio_set_function(UART_RTS_PIN, GPIO_FUNC_UART);
        gpio_set_function(UART_CTS_PIN, GPIO_FUNC_UART);
        uart_rts = 1;
        uart_cts = 1;
        hw_write_masked(&uart->h->cr,
                       (bool_to_bit(uart_cts) << UART_UARTCR_CTSEN_LSB) | (bool_to_bit(uart_rts) << UART_UARTCR_RTSEN_LSB),
                       UART_UARTCR_RTSEN_BITS | UART_UARTCR_CTSEN_BITS);

        break;
#else
        return ARM_USART_ERROR_FLOW_CONTROL;
#endif

      default: return ARM_USART_ERROR_FLOW_CONTROL;
    }
    // Configuration is valid, apply setti
    // Setup baud rate dividers
    uart_set_baudrate(uart->reg, arg);

    // Set configured flag
    uart->info->flags |= UART_FLAG_CONFIGURED;
  }
  
  return ARM_DRIVER_OK;
}

static ARM_USART_STATUS UART_GetStatus (const UART_RESOURCES *uart) {
  ARM_USART_STATUS uart_status;

  if (uart->xfer->send_active != 0U) {
    uart_status.tx_busy        = 1U;
  } else {
    //status.tx_busy        = ((usart->reg->FR & UART_FR_BUSY_Msk) ? (1U) : (0U));
  }

  uart_status.rx_busy          = uart->info->status.rx_busy;
  uart_status.tx_underflow     = uart->info->status.tx_underflow;
  uart_status.rx_overflow      = uart->info->status.rx_overflow;
  uart_status.rx_break         = uart->info->status.rx_break;
  uart_status.rx_framing_error = uart->info->status.rx_framing_error;
  uart_status.rx_parity_error  = uart->info->status.rx_parity_error;

  return uart_status;

}
